Add Api call and putting data in DOM

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -57,3 +57,34 @@ html {
   height: 100%;
   font-size: 62.5%;
 }
+
+table {
+  width: 80%;
+  margin: 0 auto;
+  border: 1px solid black;
+}
+
+tr {
+  border: 1px solid green;
+  display: inline-block;
+  height: 100px;
+  width: 100px;
+  position: relative;
+}
+
+td {
+  width: 80%;
+  margin-left: 10%;
+}
+
+img {
+  width: 100%;
+  max-height: 80px;
+}
+
+.table__name {
+  display: block;
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+}
